--- a/js/package.json
+++ b/js/package.json
@@ -40,7 +40,8 @@
     "leaflet.markercluster": "^1.2.0",
     "leaflet.vectorgrid": "^1.3.0",
     "spin.js": "^4.1.0",
-    "leaflet-search": "^2.9.8"
+    "leaflet-search": "^2.9.8",
+    "leaflet-svgicon": "^0.0.2"
   },
   "devDependencies": {
     "css-loader": "^3.4.2",
