--- a/js/package.json
+++ b/js/package.json
@@ -28,21 +28,22 @@
     "@phosphor/widgets": "^1.9.3",
     "leaflet": "^1.3.0",
     "leaflet-ant-path": "^1.3.0",
+    "leaflet-area-select": "^1.0.5",
     "leaflet-defaulticon-compatibility": "^0.1.1",
     "leaflet-draw": "^1.0.4",
     "leaflet-fullscreen": "^1.0.2",
     "leaflet-measure": "^3.1.0",
     "leaflet-rotatedmarker": "^0.2.0",
+    "leaflet-search": "^2.9.8",
     "leaflet-splitmap": "^1.0.1",
     "leaflet-transform": "^1.0.3",
     "leaflet-velocity": "^1.2.4",
     "leaflet.awesome-markers": "^2.0.5",
-    "leaflet.markercluster": "^1.2.0",
+    "leaflet.markercluster": "^1.4.1",
     "leaflet.vectorgrid": "^1.3.0",
     "proj4": "^2.6.0",
     "proj4leaflet": "^1.0.1",
-    "spin.js": "^4.1.0",
-    "leaflet-search": "^2.9.8"
+    "spin.js": "^4.1.0"
   },
   "devDependencies": {
     "css-loader": "^3.4.2",
